--- a/cans/cans/class_based/plan.org
+++ b/cans/cans/class_based/plan.org
@@ -1,4 +1,4 @@
-* TODO [1/3]
+* TODO [1/8]
   - [X] Code should be able to handle empty spots
     - e.g. in miniQFA
     - [X] Is it better to bound rs to be zero (0, 0) or remove them as
@@ -10,8 +10,19 @@
     - [X] Do no plot C for empty plates.
   - [ ] Determine stopping criteria for fits
     - [ ] Time fitting
-    - [ ] What value of ftol to use? Or use fun? What value?
+    - [ ] What value of ftol to use?
   - [ ] Run full plate fits in parallel using different initial
     guesses.
-    - Should these be read from file or randomly generated each time?
-    - If read from file would have to apply
+    - [ ] Do so for several kns
+    - [ ] 10 x random
+    - [ ] Uniform
+    - [ ] Inde est
+    - These should be saved and read from file.
+  - [ ] Determine how to store results
+  - [ ] Determine how to parse in data
+    - Only want meta data in one place if possible? So a reference to
+      the data set should be fine.
+  - [ ] Fit a 6x6 square of true data and remove outside squares.
+  - [ ] Is it faster to go cultures->inde->comp or cultures->comp?
+  - [ ] Are comp estimates more reliable than logistic or single
+    culture allowing N_0 to vary?
