--- a/docs/lab_meeting_presentation/equations.tex
+++ b/docs/lab_meeting_presentation/equations.tex
@@ -42,6 +42,22 @@ x(t) = \frac{KPe^{rt}}{K + P(e^{rt}-1)},
 \end{subequations}
 
 \begin{subequations}
+	\label{eq:9}
+	\begin{align}
+	&N + C \xrightarrow[]{b_{i}} 2C,\\
+	&\frac{dC}{dt} = b_{i}[N][C]
+	\end{align}
+\end{subequations}
+
+\begin{subequations}
+	\label{eq:9}
+	\begin{align}
+	&r = b_{i}(N_0 + C_0)\\
+	&K = (N_0 + C_0)
+	\end{align}
+\end{subequations}
+
+\begin{subequations}
 	\label{eq:5}
 	\begin{align}
 	\frac{dC_{i}}{dt} =&~b_{i}N_{i}C_{i},\\
