add delta i label

--- a/docs/lab_meeting_presentation/equations.tex
+++ b/docs/lab_meeting_presentation/equations.tex
@@ -41,6 +41,10 @@ x(t) = \frac{KPe^{rt}}{K + P(e^{rt}-1)},
 	\end{align}
 \end{subequations}
 
+\begin{equation}
+    -~\delta_{i}
+\end{equation}
+
 \begin{subequations}
 	\label{eq:9}
 	\begin{align}
