Pick versions of first slides

--- a/docs/lab_meeting_presentation/equations.tex
+++ b/docs/lab_meeting_presentation/equations.tex
@@ -36,10 +36,14 @@ x(t) = \frac{KPe^{rt}}{K + P(e^{rt}-1)},
 \begin{subequations}
 	\label{eq:9}
 	\begin{align}
-		&N + C \xrightarrow[]{b_{i}} 2C,\\
-		&rate = b_{i}[N][C]
+	&C + N \xrightarrow[]{b_{i}} 2C,\\
+	&rate = b_{i}[C][N]
 	\end{align}
 \end{subequations}
+
+\begin{equation}
+	C + N \xrightarrow[]{b_{i}[C][N]} 2C
+\end{equation}
 
 \begin{equation}
     -~\delta_{i}
