Change graphics path

--- a/docs/plan.tex
+++ b/docs/plan.tex
@@ -13,7 +13,7 @@ time. If you would like to follow the project a blog is set up at
 http://boo62.github.io/ and useful content will be posted soon.
 
 \end{multicols}
-\graphicspath{{images/}}
+\graphicspath{{images_low_res/}}
 \begin{Figure}
   \centering
   \includegraphics[width=0.98\linewidth]{gantt_chart}
